# citation-cliques

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md
citation_manipulation/: Makefile  pyproject.toml
citation_manipulation/data/: predictions_final.csv
citation_manipulation/python/: citation_analysis.py  diagrams.py  hybrid_outlier_analysis.py  insert_predictions.py  investigate_authors.py  match_authors.py
citation_manipulation/sql/: author_behavior_metrics.sql  author_matched_candidates.sql  author_matched_pairs.sql  author_paper_subject_citations.sql  author_primary_subject.sql  author_profiles.sql  author_pubs_precalc.sql  author_subject_stats.sql  author_venue_metrics.sql  author_works_master.sql  authors_enriched.sql  citation_anomalies_enriched.sql  citation_anomalies_metrics.sql  citing_authors_counts.sql  coauthor_links.sql  filtered_authors.sql  matches.sql  micro_edges.sql  ordered_pairs.sql  relevant_works.sql  resolved_refs.sql  work_citations.sql
citation_manipulation/tests/: author_behavior_metrics.rdbu  author_profiles.rdbu  citation_network_final.rdbu  eigenfactor_percentiles.rdbu  hypothesis_test_summary.rdbu
common/: Makefile
data/: README.md  eigenfactor_scores_optimized.csv
python/: get_tables.py
sql/: abm_micro_edges_fast.sql  author_behavior_metrics_ram.sql  author_primary_subject_ranked.sql  author_subject_h5_index.sql  bottom_authors_sampled.sql  citation_anomalies.sql  citation_network_agg.sql  citation_network_final.sql  cited_authors_counts.sql  cnf_pair_bursts.sql  cnf_pair_dir_totals.sql  control_authors_bucketed.sql  (+6 more)
(+5 files in other folders)
