[project]
name = "citation-cliques"
version = "1.0.0"
description = "Replication package for Citation Cliques in Low Impact Journals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "apsw>=3.51.0.0",
    "importlib-metadata>=8.7.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyahocorasick>=2.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
